# capture_the_castle

./: .gitignore  CMakeLists.txt  Capture the Castle Nov 18 Crossplay Results.xlsx  Capture the Castle Oct 21 Crossplay Results.xlsx  README.md  milestone1_progress_report  milestone2_progress_report.txt  milestone3_progress_report  milestone4_progress_report.md
data/maze/: BanditCircus.tmx  HelloWorld.tmx  HiLabyrinth.tmx  TwoByTwo.tmx  maze_sprite_sheet.tsx
ext/sdl/include/SDL/: SDL_config.h  SDL_config.h.in  SDL_config_android.h  SDL_config_iphoneos.h  SDL_config_macosx.h  SDL_config_macosx.h.orig  SDL_config_windows.h  SDL_config_winrt.h  SDL_egl.h  SDL_opengl.h  SDL_opengles2_khrplatform.h  SDL_system.h  SDL_thread.h
shaders/: coloured.vs.glsl  firework.fs.glsl  firework.vs.glsl  player.fs.glsl  salmon.vs.glsl  text.fs.glsl  text.vs.glsl  tilemap.fs.glsl  tilemap.vs.glsl  water.fs.glsl  water.vs.glsl
src/: background.cpp  background.hpp  bandit.cpp  bandit.hpp  castle.cpp  castle.hpp  common.cpp  common.hpp  components.cpp  components.hpp  curve.hpp  effect_manager.cpp  effect_manager.hpp  fish.cpp  fish.hpp  itemBoard.cpp  itemBoard.hpp  main.cpp  mesh_manager.cpp  mesh_manager.hpp  player.cpp  player.hpp  project_path.hpp  salmon.cpp  salmon.hpp  soldier.cpp  soldier.hpp  texture_manager.cpp  texture_manager.hpp  tile.cpp  tile.hpp  tilemap.cpp  tilemap.hpp  turtle.cpp  turtle.hpp  world.cpp  world.hpp
src/ecs/: common_ecs.hpp  component_array.hpp  component_manager.hpp  ecs_manager.hpp  entity_manager.cpp  entity_manager.hpp  event_handler.hpp  event_manager.hpp  events.hpp  system_manager.hpp
src/states/: game.cpp  game.hpp  howtoplay.cpp  howtoplay.hpp  menu.cpp  menu.hpp  state.hpp
src/systems/: bandit_ai_system.cpp  bandit_ai_system.hpp  bandit_spawn_system.cpp  bandit_spawn_system.hpp  box_collision_system.cpp  box_collision_system.hpp  collision_system.cpp  collision_system.hpp  curve_movement_system.hpp  item_board_system.cpp  item_board_system.hpp  item_effect_system.hpp  item_spawn_system.cpp  item_spawn_system.hpp  movement_system.cpp  movement_system.hpp  player_input_system.cpp  player_input_system.hpp  rain_system.cpp  rain_system.hpp  render_system.cpp  render_system.hpp  soldier_ai_system.cpp  soldier_ai_system.hpp  soldier_spawn_system.cpp  soldier_spawn_system.hpp
src/ui/: closebtn.cpp  closebtn.hpp  countdown_timer.cpp  countdown_timer.hpp  firework.cpp  firework.hpp  help_background.cpp  help_background.hpp  help_instructions.cpp  help_instructions.hpp  help_window.cpp  help_window.hpp  helpbtn.cpp  helpbtn.hpp  hint.cpp  hint.hpp  howtoplay_background.cpp  howtoplay_background.hpp  menus_background.cpp  menus_background.hpp  menus_window.cpp  menus_window.hpp  pause_window.cpp  pause_window.hpp  play_instructions.cpp  play_instructions.hpp  popUpImg.cpp  popUpImg.hpp  popup_background.cpp  popup_background.hpp  popupbtn.cpp  popupbtn.hpp  soldier_setup_window.cpp  soldier_setup_window.hpp  win_background.cpp  win_background.hpp  win_window.cpp  win_window.hpp  win_winnerDp.cpp  win_winnerDp.hpp
